# opl-app

./: .dockerignore  .gitignore  README.md  about.md  deploy.sh  fly.api.toml  fly.demo-api.toml  fly.demo-ui.toml  fly.ui.toml  secrets  seed-db.sh  start.sh
.github/workflows/: deploy.yml
opl-api/: .dockerignore  Dockerfile  Makefile  auth.py  database.py  email_service.py  log.txt  main.py  models.py  opl_db.db  pyproject.toml  scheduler.py  utils.py
opl-api/alembic/: env.py
opl-api/alembic/versions/: 792569e4f76b_baseline.py  a3c9f2d1e840_add_is_bye_and_nullable_player2_to_matches.py  b1c2d3e4f5a6_flexible_scheduling.py  c2d3e4f5a6b7_add_incompleted_to_matches.py  cacca2123d18_merge_heads.py  d3e4f5a6b7c8_fix_completed_match_weights.py  d4e5f6a7b8c9_add_scoring_and_payments.py  e1f2a3b4c5d6_independent_score_submissions.py  e5f6a7b8c9d0_add_dues_to_sessions.py  f6a7b8c9d0e1_add_race_to_matches.py  febd118bfcad_add_deleted_to_players_sessions_.py  g2h3i4j5k6l7_merge_heads.py
opl-api/models/: __init__.py  division.py  game.py  match.py  message.py  payment.py  player.py  score_submission.py  session.py  user.py
opl-api/routers/: auth.py  contact.py  division.py  game.py  join.py  match.py  message.py  payment.py  player.py  session.py  user.py
opl-api/scripts/: backfill_match_ratings.py  clear_db.py  generate_test_data.py  init_empty_db.py  init_test_db.py  test_data.json  undo_match.py
opl-api/services/: auth.py  email_service.py  recaptcha.py  scheduler.py
opl-api/tests/: conftest.py  test_divisions.py  test_players.py  test_utils.py
opl-ui/: .gitignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
opl-ui/app/: app.css  root.tsx  routes.ts  theme.ts
opl-ui/app/lib/: api.ts  auth.tsx  queries.ts  snackbar.tsx  types.ts  utils.ts
(+91 files in other folders)
