[project]
name = "opl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker==40.1.2",
    "fastapi[standard]==0.128.0",
    "google-auth==2.48.0",
    "PyJWT==2.11.0",
    "requests==2.32.5",
    "sqlmodel==0.0.32",
]
