[project]
name = "opl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker==40.1.2",
    "fastapi[standard]==0.128.0",
    "google-auth==2.48.0",
    "PyJWT==2.11.0",
    "requests==2.32.5",
    "sqlmodel==0.0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.ruff]
# Set line length to 100 (matching your Prettier config)
line-length = 100
indent-width = 4

# Target Python 3.12+
target-version = "py312"

[tool.ruff.lint]
# Enable recommended rules plus extras
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # FastAPI uses Depends() in defaults - this is intentional
]

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes (matching your JS/TS style)
quote-style = "single"

# Indent with 4 spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"
